Update JSON configurations, add dotenv support, and modify user claim data

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "dinovn-fca": "^1.2.3",
     "diskusage": "^1.2.0",
     "distube": "^5.0.4",
+    "dotenv": "^16.4.7",
     "encode32": "^1.1.0",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
