--- a/database/threadSettings.json
+++ b/database/threadSettings.json
@@ -1,6 +1,6 @@
 {
   "6589198804475799": {
-    "notifications": false,
+    "notifications": true,
     "welcomeMessage": "chào con vợ {userName} đã đến với {threadName} của anh",
     "leaveMessage": "👋 {userName} {actionType}.\n👥 Thành viên còn lại: {memberCount}"
   },
