--- a/logins/hut-chat-api/config.json
+++ b/logins/hut-chat-api/config.json
@@ -8,8 +8,8 @@
     "FCA_OPTIONS": {
         "pauseLog": false,
         "selfListen": true,
-        "listenEvents": false,
+        "listenEvents": true,
         "forceLogin": true,
-        "userAgent": "Mozilla/5.0 (Linux; Android 9; SM-G973U Build/PPR1.180610.011) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/69.0.3497.100 Mobile Safari/537.36"
+        "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/121.0.0.0 Safari/537.36"
     }
 }
