--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "dotenv": "^16.4.7",
     "encode32": "^1.1.0",
     "express": "^4.19.2",
+    "express-rate-limit": "^7.5.0",
     "express-session": "^1.18.0",
     "face-api.js": "^0.22.2",
     "facebook-chat-api": "^1.8.0",
@@ -51,6 +52,7 @@
     "got": "^11.8.6",
     "gradient-string": "^2.0.2",
     "gtts": "^0.2.1",
+    "helmet": "^8.0.0",
     "http-proxy-middleware": "^3.0.2",
     "https": "^1.0.0",
     "image-downloader": "^4.3.0",
@@ -71,7 +73,7 @@
     "pastebin-api": "^7.0.0",
     "path": "^0.12.7",
     "pm2": "^5.4.3",
-    "proxy-chain": "^2.5.3",
+    "proxy-chain": "^2.5.6",
     "puppeteer": "^23.11.1",
     "puppeteer-core": "^23.3.1",
     "puppeteer-extra": "^3.3.6",
@@ -79,6 +81,7 @@
     "qrcode": "^1.5.4",
     "qrcode-reader": "^1.0.4",
     "qs": "^6.13.1",
+    "readline": "^1.3.0",
     "request": "^2.88.2",
     "sentiment": "^5.0.2",
     "sharp": "^0.33.5",
