--- a/logins/hut-chat-api/config.json
+++ b/logins/hut-chat-api/config.json
@@ -2,14 +2,14 @@
     "APPSTATE_PATH": "./appstate.json",
     "APPSTATE_PROTECTION": true,
     "AUTO_PING_SERVER": true,
-    "ALLOW_INBOX": true,
+    "ALLOW_INBOX": false,
     "DATABASE": "JSON",
     "DATABASE_JSON_BEAUTIFY": false,
     "FCA_OPTIONS": {
         "pauseLog": false,
-        "selfListen": true,
-        "listenEvents": true,
+        "selfListen": false,
+        "listenEvents": false,
         "forceLogin": true,
-        "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/121.0.0.0 Safari/537.36"
+        "userAgent": "Mozilla/5.0 (Linux; Android 9; SM-G973U Build/PPR1.180610.011) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/69.0.3497.100 Mobile Safari/537.36"
     }
 }
