--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tensorflow-models/mobilenet": "^2.1.1",
     "@tensorflow/tfjs-node": "^4.22.0",
     "@types/node": "^18.0.6",
+    "@vitalets/google-translate-api": "^9.2.0",
     "@xaviabot/fb-downloader": "^1.0.14",
     "@xaviabot/fca-unofficial": "^1.3.33",
     "axios": "^1.7.9",
@@ -28,12 +29,15 @@
     "chartjs-adapter-date-fns": "^3.0.0",
     "chartjs-plugin-annotation": "^3.1.0",
     "cheerio": "^1.0.0-rc.12",
+    "chess.js": "^1.0.0-beta.8",
     "dinovn-fca": "^1.2.3",
     "diskusage": "^1.2.0",
     "distube": "^5.0.4",
+    "docx": "^9.1.0",
     "dotenv": "^16.4.7",
+    "ejs": "^3.1.10",
     "encode32": "^1.1.0",
-    "express": "^4.19.2",
+    "express": "^4.21.2",
     "express-rate-limit": "^7.5.0",
     "express-session": "^1.18.0",
     "face-api.js": "^0.22.2",
@@ -64,6 +68,7 @@
     "langdetect": "^0.2.1",
     "lowdb": "^7.0.1",
     "mal-scraper": "^2.13.2",
+    "markdown-pdf": "^11.0.0",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.45",
     "node-cache": "^5.1.2",
