Update JSON configurations, modify user data, and enhance fishing statistics

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nodejs",
+  "name": "fca-aki",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -20,7 +20,9 @@
     "@vitalets/google-translate-api": "^9.2.0",
     "@xaviabot/fb-downloader": "^1.0.14",
     "@xaviabot/fca-unofficial": "^1.3.33",
-    "axios": "^1.7.9",
+    "2captcha": "^3.0.7",
+    "2captcha-node": "^2.2.1",
+    "axios": "^1.6.2",
     "body-parser": "^1.20.2",
     "cache": "^3.0.0",
     "canvas": "^2.11.2",
@@ -79,10 +81,11 @@
     "path": "^0.12.7",
     "pm2": "^5.4.3",
     "proxy-chain": "^2.5.6",
-    "puppeteer": "^23.11.1",
+    "puppeteer": "^21.5.0",
     "puppeteer-core": "^23.3.1",
     "puppeteer-extra": "^3.3.6",
     "puppeteer-extra-plugin-recaptcha": "^3.6.8",
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
     "qrcode": "^1.5.4",
     "qrcode-reader": "^1.0.4",
     "qs": "^6.13.1",
