Add Bilibili video information command and downloader utility; update various configurations and user data

--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "node-cache": "^5.1.2",
     "node-cron": "^3.0.3",
     "node-schedule": "^2.1.1",
+    "node-shazam": "^1.2.7",
     "node-summarizer": "^1.0.7",
     "pastebin-api": "^7.0.0",
     "path": "^0.12.7",
@@ -93,6 +94,7 @@
     "request": "^2.88.2",
     "sentiment": "^5.0.2",
     "sharp": "^0.33.5",
+    "shazam-api": "^0.2.1-0",
     "simple-youtube-api": "^5.2.1",
     "socket.io": "^4.7.5",
     "streamifier": "^0.1.1",
