Refactor user data management: delete unused files, add new usernames, and update package dependencies

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "cheerio": "^1.0.0-rc.12",
     "chess.js": "^1.0.0-beta.8",
     "dinovn-fca": "^1.2.3",
+    "discord.js": "^14.17.3",
     "diskusage": "^1.2.0",
     "distube": "^5.0.4",
     "docx": "^9.1.0",
