Refactor user management and update thread settings; add retry logic for thread info retrieval, modify user balances, and remove unused commands

--- a/database/threadSettings.json
+++ b/database/threadSettings.json
@@ -20,6 +20,7 @@
   "29116818497908958": {
     "notifications": false,
     "welcomeMessage": "🎉 Xin chào {userName}!\nChào mừng bạn đến với nhóm \"{threadName}\"!\nBạn là thành viên thứ {memberNumber}",
-    "leaveMessage": "👋 {userName} {actionType}.\n👥 Thành viên còn lại: {memberCount}"
+    "leaveMessage": "👋 {userName} {actionType}.\n👥 Thành viên còn lại: {memberCount}",
+    "notify_color": false
   }
 }
