--- a/package.json
+++ b/package.json
@@ -82,6 +82,8 @@
     "pastebin-api": "^7.0.0",
     "path": "^0.12.7",
     "pm2": "^5.4.3",
+    "portfinder": "^1.0.32",
+    "proper-lockfile": "^4.1.2",
     "proxy-chain": "^2.5.6",
     "puppeteer": "^21.5.0",
     "puppeteer-core": "^23.3.1",
