--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
     "shazam-api": "^0.2.1-0",
     "simple-youtube-api": "^5.2.1",
     "socket.io": "^4.7.5",
+    "start": "^5.1.0",
     "streamifier": "^0.1.1",
     "tesseract.js": "^5.1.1",
     "tinygradient": "^1.1.5",
