--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "fs-extra": "^11.2.0",
     "gif-frames": "^1.0.1",
     "gifencoder": "^2.0.1",
+    "googleapis": "^144.0.0",
     "got": "^11.8.6",
     "gradient-string": "^2.0.2",
     "gtts": "^0.2.1",
