Update bot running status, modify user claims and settings, enhance command responses, and clean up unused gift codes

--- a/database/threadSettings.json
+++ b/database/threadSettings.json
@@ -26,7 +26,7 @@
     "notify_color": false
   },
   "8940255536071225": {
-    "notifications": false,
+    "notifications": true,
     "welcomeMessage": "🎉 Xin chào {userName}!\nChào mừng bạn đến với nhóm \"{threadName}\"!\nBạn là thành viên thứ {memberNumber}",
     "leaveMessage": "👋 {userName} {actionType}.\n👥 Thành viên còn lại: {memberCount}",
     "notify_avatar": false,
