--- a/database/threadSettings.json
+++ b/database/threadSettings.json
@@ -33,5 +33,12 @@
     "notify_name": false,
     "notify_admin": false,
     "notify_nick": false
+  },
+  "9155220831235980": {
+    "notifications": false,
+    "notify_admin": false,
+    "notify_avatar": false,
+    "notify_name": false,
+    "notify_nick": false
   }
 }
