--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "2captcha": "^3.0.7",
     "2captcha-node": "^2.2.1",
     "axios": "^1.6.2",
+    "base64url": "^3.0.1",
     "body-parser": "^1.20.2",
     "cache": "^3.0.0",
     "canvas": "^2.11.2",
@@ -32,6 +33,8 @@
     "chartjs-plugin-annotation": "^3.1.0",
     "cheerio": "^1.0.0-rc.12",
     "chess.js": "^1.0.0-beta.8",
+    "chrome-launcher": "^1.1.2",
+    "crawler": "^2.0.2",
     "dinovn-fca": "^1.2.3",
     "discord.js": "^14.17.3",
     "diskusage": "^1.2.0",
@@ -48,6 +51,7 @@
     "fast-levenshtein": "^3.0.0",
     "fast-speedtest-api": "^0.3.2",
     "fca": "^0.0.1-security",
+    "file-type": "^20.0.1",
     "fluent-ffmpeg": "^2.1.3",
     "form-data": "^4.0.0",
     "franc-min": "^6.2.0",
@@ -64,12 +68,14 @@
     "http-proxy-middleware": "^3.0.2",
     "https": "^1.0.0",
     "image-downloader": "^4.3.0",
+    "image-size": "^1.2.0",
     "instagram-private-api": "^1.46.1",
     "is-hexcolor": "^1.0.0",
     "is-url": "^1.2.4",
     "jimp": "^1.6.0",
     "jsqr": "^1.4.0",
     "langdetect": "^0.2.1",
+    "lighthouse": "^12.3.0",
     "lowdb": "^7.0.1",
     "mal-scraper": "^2.13.2",
     "markdown-pdf": "^11.0.0",
@@ -84,6 +90,7 @@
     "path": "^0.12.7",
     "pm2": "^5.4.3",
     "portfinder": "^1.0.32",
+    "pretty-bytes": "^6.1.1",
     "proper-lockfile": "^4.1.2",
     "proxy-chain": "^2.5.6",
     "puppeteer": "^21.5.0",
