--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@discordjs/opus": "^0.10.0",
     "@discordjs/voice": "^0.18.0",
     "@distube/yt-dlp": "^2.0.1",
     "@distube/ytdl-core": "^4.16.0",
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@google/generative-ai": "^0.21.0",
     "@tensorflow-models/mobilenet": "^2.1.1",
     "@tensorflow/tfjs-node": "^4.22.0",
@@ -56,6 +58,7 @@
     "fast-levenshtein": "^3.0.0",
     "fast-speedtest-api": "^0.3.2",
     "fca": "^0.0.1-security",
+    "ffmpeg-static": "^5.2.0",
     "file-type": "^20.0.1",
     "fluent-ffmpeg": "^2.1.3",
     "form-data": "^4.0.0",
@@ -91,8 +94,10 @@
     "node-schedule": "^2.1.1",
     "node-shazam": "^1.2.7",
     "node-summarizer": "^1.0.7",
+    "opusscript": "^0.0.8",
     "pastebin-api": "^7.0.0",
     "path": "^0.12.7",
+    "play-dl": "^1.9.7",
     "pm2": "^5.4.3",
     "portfinder": "^1.0.32",
     "pretty-bytes": "^6.1.1",
