--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "chartjs-adapter-date-fns": "^3.0.0",
     "chartjs-plugin-annotation": "^3.1.0",
     "cheerio": "^1.0.0-rc.12",
-    "chess.js": "^1.0.0-beta.8",
+    "chess.js": "^1.1.0",
     "chrome-launcher": "^1.1.2",
     "crawler": "^2.0.2",
     "dinovn-fca": "^1.2.3",
