--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "image-downloader": "^4.3.0",
     "image-size": "^1.2.0",
     "instagram-private-api": "^1.46.1",
+    "ip": "^2.0.1",
     "is-hexcolor": "^1.0.0",
     "is-url": "^1.2.4",
     "jimp": "^1.6.0",
@@ -89,6 +90,8 @@
     "markdown-pdf": "^11.0.0",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.45",
+    "morgan": "^1.10.0",
+    "ngrok": "^5.0.0-beta.2",
     "node-cache": "^5.1.2",
     "node-cron": "^3.0.3",
     "node-schedule": "^2.1.1",
