--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "base64url": "^3.0.1",
     "better-sqlite3": "^11.9.1",
     "body-parser": "^1.20.2",
+    "bwip-js": "^4.5.3",
     "cache": "^3.0.0",
     "canvas": "^2.11.2",
     "chalk": "^4.1.2",
