--- a/appstate.json
+++ b/appstate.json
@@ -1,12 +1,12 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%22100040203282108%22%3A%22MXh2uvaY%22%2C%2261573427362389%22%3A%22s6tEdr3t%22%2C%22100092325757607%22%3A%22ciXIgchr%22%2C%2261563982612558%22%3A%22y6lzqYdN%22%7D",
+        "value": "%7B%22100040203282108%22%3A%22MXh2uvaY%22%2C%2261573427362389%22%3A%22s6tEdr3t%22%2C%22100092325757607%22%3A%22ciXIgchr%22%2C%2261563982612558%22%3A%22UDrCJoK7%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-05-31T15:46:12.878Z",
-        "lastAccessed": "2025-05-31T15:46:12.879Z"
+        "creation": "2025-06-05T08:11:18.896Z",
+        "lastAccessed": "2025-06-05T08:11:18.896Z"
     },
     {
         "key": "sb",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-05-31T15:46:12.879Z",
-        "lastAccessed": "2025-05-31T15:46:12.879Z"
+        "creation": "2025-06-05T08:11:18.896Z",
+        "lastAccessed": "2025-06-05T08:11:18.896Z"
     },
     {
         "key": "ps_l",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-05-31T15:46:12.879Z",
-        "lastAccessed": "2025-05-31T15:46:12.879Z"
+        "creation": "2025-06-05T08:11:18.896Z",
+        "lastAccessed": "2025-06-05T08:11:18.896Z"
     },
     {
         "key": "ps_n",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-05-31T15:46:12.879Z",
-        "lastAccessed": "2025-05-31T15:46:12.879Z"
+        "creation": "2025-06-05T08:11:18.896Z",
+        "lastAccessed": "2025-06-05T08:11:18.896Z"
     },
     {
         "key": "dpr",
@@ -41,17 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-05-31T15:46:12.879Z",
-        "lastAccessed": "2025-05-31T15:46:12.879Z"
-    },
-    {
-        "key": "datr",
-        "value": "9iMsaPw9ZC7Wts-Ek_7Iw3Pc",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-05-31T15:46:12.879Z",
-        "lastAccessed": "2025-05-31T15:46:12.879Z"
+        "creation": "2025-06-05T08:11:18.896Z",
+        "lastAccessed": "2025-06-05T08:11:18.896Z"
     },
     {
         "key": "wd",
@@ -59,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-05-31T15:46:12.879Z",
-        "lastAccessed": "2025-05-31T15:46:12.879Z"
+        "creation": "2025-06-05T08:11:18.896Z",
+        "lastAccessed": "2025-06-05T08:11:18.896Z"
     },
     {
         "key": "c_user",
@@ -68,34 +59,34 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-05-31T15:46:12.879Z",
-        "lastAccessed": "2025-05-31T15:46:12.879Z"
+        "creation": "2025-06-05T08:11:18.896Z",
+        "lastAccessed": "2025-06-05T08:11:18.896Z"
+    },
+    {
+        "key": "datr",
+        "value": "IFFBaAM2ZgrKgrHWyuGlN_al",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-06-05T08:11:18.896Z",
+        "lastAccessed": "2025-06-05T08:11:18.896Z"
     },
     {
         "key": "xs",
-        "value": "11%3AbaOrOGuoNPsYZw%3A2%3A1748706328%3A-1%3A-1",
+        "value": "23%3Ayb4MU0krK6qs3Q%3A2%3A1749111073%3A-1%3A-1",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-05-31T15:46:12.879Z",
-        "lastAccessed": "2025-05-31T15:46:12.879Z"
+        "creation": "2025-06-05T08:11:18.896Z",
+        "lastAccessed": "2025-06-05T08:11:18.896Z"
     },
     {
         "key": "fr",
-        "value": "1BrX85LnqbJeVEQuw.AWfNzrmIk_OpA6VLbICBDMUaJk4MvnSDo3yN9cEA72ipsCJ3_ok.BoOyQL..AAA.0.0.BoOyQa.AWcWf5XbZ1OXcMCkHg1wMh_DpSY",
+        "value": "1nXoJdUO8hTXKUpRp.AWe8pnv8IwT8YW1Nk-7eaFnIRDwf5Q5m6DiLqsJIsU-ETBuiMuM.BoQTJT..AAA.0.0.BoQVEi.AWdfJeg_sDdXT-hRKp6ugde6_SI",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-05-31T15:46:12.879Z",
-        "lastAccessed": "2025-05-31T15:46:12.879Z"
-    },
-    {
-        "key": "presence",
-        "value": "C%7B%22t3%22%3A%5B%5D%2C%22utc3%22%3A1748706349389%2C%22v%22%3A1%7D",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-05-31T15:46:12.879Z",
-        "lastAccessed": "2025-05-31T15:46:12.879Z"
+        "creation": "2025-06-05T08:11:18.896Z",
+        "lastAccessed": "2025-06-05T08:11:18.896Z"
     }
 ]
