Add new romantic phrases, update lottery results, and enhance user claims
- Added new romantic phrases to `used_rizz.json` for improved engagement.
- Updated lottery results in `quicklotto_history.json` with new draw data.
- Added a new user claim entry in `userClaims.json`.
- Modified NSFW settings to include an additional enabled thread.
- Added new user rank data in `rankData.json`.
- Enhanced GPT hook to support image input via Base64 encoding.
- Created new solution PDFs and markdown files for exercise explanations.

--- a/commands/json/nsfw_settings.json
+++ b/commands/json/nsfw_settings.json
@@ -1,6 +1,7 @@
 {
   "enabledThreads": {
-    "6671557376306223": true
+    "6671557376306223": true,
+    "7643481742422249": true
   },
   "blockedUsers": {},
   "adminBypass": true,
